[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
visible = false
margin_right = 140.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -181.639
margin_top = 0.217583
margin_right = 0.36145
margin_bottom = 44.2176
custom_fonts/font = SubResource( 2 )
text = "Seconds Left: 30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -24.0
margin_right = 116.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 3 )
text = "Get Ready"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="RestartButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -36.7153
margin_top = 12.7356
margin_right = 38.2847
margin_bottom = 38.7356
custom_fonts/font = SubResource( 4 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}
